--- a/.env
+++ b/.env
@@ -7,4 +7,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://next-auth_owner:mkLZqe2yvE9r@ep-floral-hill-a6m4970o-pooler.us-west-2.aws.neon.tech/next-auth?sslmode=require"
+# uncomment next line if you use Prisma <5.10
+# DATABASE_URL_UNPOOLED="postgresql://next-auth_owner:mkLZqe2yvE9r@ep-floral-hill-a6m4970o.us-west-2.aws.neon.tech/next-auth?sslmode=require"
+
+AUTH_SECRET="walmond"
